fix scroll and padding on mobile

--- a/src/components/generator/style.css
+++ b/src/components/generator/style.css
@@ -41,7 +41,6 @@
   background: white;
   border-bottom: 6px solid #aaa;
   padding: 2rem;
-  overflow: scroll;
 }
 
 .form {
@@ -137,6 +136,7 @@ input[type="text"],
 input[type="email"] {
   /* Auto Layout */
 
+  appearance: none;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -228,7 +228,7 @@ input:focus {
 .preview {
   background: white;
   position: relative;
-  padding: 6rem 3rem 3rem;
+  padding: 8rem 2rem 2rem;
   border-bottom: 6px solid #aaa;
 }
 
@@ -294,7 +294,7 @@ input:focus {
 .output {
   background: #013830;
   position: relative;
-  padding: 6rem 3rem 3rem 3rem;
+  padding: 6rem 2rem 3rem 2rem;
 }
 
 .codeWrapper {
@@ -371,6 +371,7 @@ input:focus {
   .formContainer {
     border-bottom: 0;
     border-right: 6px solid #aaa;
+    overflow: scroll;
   }
 
   .output {
